<resources>
    <string name="app_name">salt</string>
    <string name="text_login_header">Welcome Back!</string>
    <string name="text_login_subheader">Login to try our app first</string>
    <string name="text_email">Email</string>
    <string name="text_email_hint">testing@reqess.com</string>
    <string name="text_password">Password</string>
    <string name="text_password_hint">&#8226;&#8226;&#8226;&#8226;&#8226;&#8226;</string>
    <string name="text_login">Login</string>
    <string name="welcome_with_email">Welcome to %s</string>
</resources>